@@ -44,6 +44,7 @@
 - Correctly report platform and family. {issue}18665[18665]
 - Guard against empty stream.datasource and namespace {pull}18769[18769]
 - Fix install service script for windows {pull}18814[18814]
+- Properly stops subprocess on shutdown {pull}19567[19567]
 
 ==== New features
 
